--- a/spring-boot-hello/src/main/resources/application.properties
+++ b/spring-boot-hello/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 management.security.enabled=false
+spring.application.name=hello-service
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/, \
+  http://localhost:1112/eureka/
