--- a/eureka-server/src/main/resources/application-peer1.properties
+++ b/eureka-server/src/main/resources/application-peer1.properties
@@ -3,4 +3,4 @@ spring.application.name=eureka-server
 
 eureka.instance.hostname = localhost
 
-eureka.client.serviceUrl.defaultZone=http://${localhost:1112}/eureka/
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:1112/eureka/
