--- a/eureka-server/src/main/resources/application-peer2.properties
+++ b/eureka-server/src/main/resources/application-peer2.properties
@@ -3,4 +3,4 @@ spring.application.name=eureka-server
 
 eureka.instance.hostname = localhost
 
-eureka.client.serviceUrl.defaultZone=http://${localhost:1111}/eureka/
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:1111/eureka/
